Fix search bar picture stretching

--- a/app/assets/stylesheets/api/search.scss
+++ b/app/assets/stylesheets/api/search.scss
@@ -20,4 +20,5 @@
   width: 45px;
   margin: 10px;
   z-index: 100;
+  object-fit: cover;
 }
